refactor: rename transient tags to use 'minestompvp:' as prefix & readability improvements